--- a/TestsAlgorithmLab/TestsAlgorithmLab.csproj
+++ b/TestsAlgorithmLab/TestsAlgorithmLab.csproj
@@ -1,11 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -17,6 +14,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
   </ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\AlgorithmLab\AlgorithmLab.csproj" />
+  </ItemGroup>
 </Project>
